--- a/package.json
+++ b/package.json
@@ -12,24 +12,28 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.5.0",
+    "@types/next": "^9.0.0",
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.0",
     "formik": "^2.2.9",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
     "postcss": "^8.4.8",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
-    "@types/node": "17.0.18",
-    "@types/react": "17.0.39",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
+    "eslint-config-next": "^12.1.0",
     "typescript": "4.5.5"
+  },
+  "resolutions": {
+    "@types/react": "17.0.1"
   }
 }
