--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.2.9",
     "next": "12.1.0",
     "next-redux-wrapper": "^7.0.5",
+    "next-secure-headers": "^2.2.0",
     "postcss": "^8.4.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
